0.0.1
	* Initial version

0.0.2
	* Removed debug statements.
	* Fixed test.

0.0.3
	* Un-necessary comments cleanup

0.0.4
	* Removed esql dependency.
	* Fixed arguments for query in test.

0.0.5
	* Fixed issue #2 query returns 0 instead of database name from
	  sysdatabases
	* Fixed issue #3 query.select() with array of strings as arg produces
	  wrong (quoted) select fields

0.0.6
	* Added support for Skip, First and Limit informix SQL constructs
	* Implemented Informix Projection Clauses

0.0.7
	* New logic for implementing Informix Projection Clauses

0.0.8
	* compatibility upgrade to nodejs v0.8.0
	* bindings.gyp for node-gyp
	* added docs.doxy for doxygen
	* added support for insert/udate/delete statements

0.0.9
	* Use libuv for node v0.7.8 onwards.

0.0.10
	* enable returning informix messages for failed queries.

0.0.11
	* removed support for libev. use lower versios for libev.